--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -44,6 +44,10 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-45578162-2', 'auto');
+  ga('set', {
+    page: location.pathname + location.search  + location.hash,
+    title: location.hash
+});
   ga('send', 'pageview');
 
 </script>
