--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -40,6 +40,11 @@
       $('.icon').click(function(){
         var type = $(this).attr("href");
         createCookie("gs_type", type);
+        ga('set', {
+            page: location.pathname + location.search  + location.hash,
+            title: location.hash
+        });
+        ga('send', 'pageview');
         $("#modal").trigger('closeModal');
       })        
       });</script>
